--- a/css/exercice6.css
+++ b/css/exercice6.css
@@ -4,30 +4,38 @@ div {
 
 #turquoise {
 	background-color: turquoise;
-	width: 600px;
-	height: 50px;
+	width: 280px;
+	height: 250px;
 }
 
 #vert {
 	background-color: green;
-	width: 100px;
-	height: 100px;
-	position: absolute;
-	top: 300px;
-	left: 250px;
+	width: 50px;
+	height: 50px;
 }
 
 #bleu {
 	background-color: blue;
 	width: 50px;
 	height: 50px;
+	position: relative;
+	left: 200px;
+	top: 135px;
 }
 
 #orange {
 	background-color: orange;
 	width: 50px;
 	height: 50px;
-	position: absolute;
-	top: 200px;
+	position: relative;
+	top: 270px;
+}
+
+#jaune {
+	background-color: yellow;
+	width: 50px;
+	height: 50px;
+	position: relative;
 	left: 200px;
+	top: 270px;
 }
