--- a/css/exercice6.css
+++ b/css/exercice6.css
@@ -4,38 +4,44 @@ div {
 
 #turquoise {
 	background-color: turquoise;
-	width: 280px;
-	height: 250px;
+	width: 300px;
+	height: 300px;
 }
 
 #vert {
 	background-color: green;
-	width: 50px;
-	height: 50px;
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	z-index: 1;
 }
 
 #bleu {
 	background-color: blue;
-	width: 50px;
-	height: 50px;
-	position: relative;
-	left: 200px;
-	top: 135px;
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	z-index: 4;
+	top:160px;
+	left: 60px;
 }
 
 #orange {
 	background-color: orange;
-	width: 50px;
-	height: 50px;
-	position: relative;
-	top: 270px;
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	top: 240px;
+	left: 140px;
+	z-index: 3;
 }
 
 #jaune {
 	background-color: yellow;
-	width: 50px;
-	height: 50px;
-	position: relative;
-	left: 200px;
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	z-index: 2;
 	top: 270px;
+	left: 170px;
 }
