--- a/css/exercice3.css
+++ b/css/exercice3.css
@@ -1,5 +1,20 @@
+body {
+	font-family: arial;
+	text-align: center;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+a:hover {
+	color: yellowgreen;
+	font-size: 20px;
+}
+
 div {
 	padding: 30px;
+	margin: auto;
 }
 
 #vert {
@@ -20,5 +35,5 @@ div {
 	height: 50px;
 	position: absolute;
 	top: 500px;
-	left: 250px;
+	left: 850px;
 }
