--- a/css/exercice5_absolute.css
+++ b/css/exercice5_absolute.css
@@ -1,4 +1,19 @@
+body {
+	font-family: arial;
+	text-align: center;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+a:hover {
+	color: yellowgreen;
+	font-size: 20px;
+}
+
 div {
+	margin: auto;
 	padding: 30px;
 }
 
@@ -10,6 +25,7 @@ div {
 
 #vert {
 	background-color: green;
+	position: absolute;
 	width: 50px;
 	height: 50px;
 }
@@ -19,7 +35,7 @@ div {
 	width: 50px;
 	height: 50px;
 	position: absolute;
-	left: 200px;
+	left: 980px;
 	top: 135px;
 }
 
@@ -36,6 +52,6 @@ div {
 	width: 50px;
 	height: 50px;
 	position: absolute;
-	left: 200px;
+	left: 980px;
 	top: 270px;
 }
