--- a/css/exercice5_relatif.css
+++ b/css/exercice5_relatif.css
@@ -1,4 +1,19 @@
+body {
+	font-family: arial;
+	text-align: center;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+a:hover {
+	color: yellowgreen;
+	font-size: 20px;
+}
+
 div {
+	margin: auto;
 	padding: 30px;
 }
 
