--- a/css/exercice6.css
+++ b/css/exercice6.css
@@ -1,7 +1,21 @@
-div {
-	padding: 30px;
+body {
+	font-family: arial;
+	text-align: center;
 }
 
+a {
+	color: black;
+	text-decoration: none;
+}
+a:hover {
+	color: yellowgreen;
+	font-size: 20px;
+}
+
+div {
+	margin: auto;
+	padding: 30px;
+}
 #turquoise {
 	background-color: turquoise;
 	width: 300px;
@@ -23,7 +37,7 @@ div {
 	position: absolute;
 	z-index: 4;
 	top:160px;
-	left: 60px;
+	left: 840px;
 }
 
 #orange {
@@ -32,7 +46,7 @@ div {
 	height: 60px;
 	position: absolute;
 	top: 240px;
-	left: 140px;
+	left: 920px;
 	z-index: 3;
 }
 
@@ -43,5 +57,5 @@ div {
 	position: absolute;
 	z-index: 2;
 	top: 270px;
-	left: 170px;
+	left: 950px;
 }
