--- a/css/exercice7.css
+++ b/css/exercice7.css
@@ -1,5 +1,24 @@
+body {
+	font-family: arial;
+	text-align: center;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+a:hover {
+	color: yellowgreen;
+	font-size: 20px;
+}
+
+div {
+	margin: auto;
+	padding: 30px;
+}
+
 section {
-	width: 400px;
+	width: 450px;
 }
 
 #vert {
