--- a/css/exercice8.css
+++ b/css/exercice8.css
@@ -1,3 +1,22 @@
+body {
+	font-family: arial;
+	text-align: center;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+a:hover {
+	color: yellowgreen;
+	font-size: 20px;
+}
+
+div {
+	margin: auto;
+	padding: 30px;
+}
+
 nav {
 	background-color: orange;
 	width: 100px;
